--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ nPuzzle/__pycache__/parser.cpython-39.pyc
 nPuzzle/__pycache__/heuristics.cpython-39.pyc
 nPuzzle/__pycache__/usageExit.cpython-39.pyc
 nPuzzle/__pycache__/optParse.cpython-39.pyc
+nPuzzle/__pycache__/keyHandler.cpython-39.pyc
