--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ nPuzzle/__pycache__/heuristics.cpython-39.pyc
 nPuzzle/__pycache__/usageExit.cpython-39.pyc
 nPuzzle/__pycache__/optParse.cpython-39.pyc
 nPuzzle/__pycache__/keyHandler.cpython-39.pyc
+test2
+
