--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ nPuzzle/__pycache__/optParse.cpython-39.pyc
 nPuzzle/__pycache__/keyHandler.cpython-39.pyc
 test2
 
+Classes/UtilsSearch/__pycache__/search.cpython-39.pyc
